[IT-0002] Code refactor according best security practices